// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImprovementAnalysisCard > renders empty state correctly for user with edit rights 1`] = `
<div
  data-v-ccdcad36=""
>
  <empty-view-stub
    data-v-ccdcad36=""
    description="Perform 5 Whys analysis and get to the bottom of things."
    descriptionrows=""
    header="Root cause analysis"
    id="improvement-analysis-empty-view"
    imgurl="5whys"
    imgwidth=""
    primarybtn="5 Whys"
    primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    secondarybtn="Learn more"
    secondarybtncolor=""
    secondarybtnicon=""
    small="false"
    tertiarybtn=""
    tertiarybtnicon=""
  />
</div>
`;

exports[`ImprovementAnalysisCard > renders empty state correctly for user without edit rights 1`] = `
<div
  data-v-ccdcad36=""
>
  <empty-view-stub
    data-v-ccdcad36=""
    description=""
    descriptionrows=""
    header="Root cause analysis"
    id="improvement-analysis-empty-view"
    imgurl="5whys"
    imgwidth=""
    primarybtn=""
    primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    secondarybtn="Learn more"
    secondarybtncolor=""
    secondarybtnicon=""
    small="false"
    tertiarybtn=""
    tertiarybtnicon=""
  />
</div>
`;
